oci/derper/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: derper
  annotations:
    linkerd.io/inject: enabled
