oci/derper/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: derper
  namespace: derper
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: derper
  ports:
    - name: http
      port: 3340
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: derper-stun
  namespace: derper
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "${AKS_NODE_RG}"
    service.beta.kubernetes.io/azure-load-balancer-ipv4: "${PUBLIC_IP_V4}"
    service.beta.kubernetes.io/azure-load-balancer-ipv6: "${PUBLIC_IP_V6}"
spec:
  type: LoadBalancer
  # STUN must see the real client address and port. With Cluster, kube-proxy
  # SNATs the packet and STUN reports the node address instead.
  externalTrafficPolicy: Local
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: derper
  ports:
    - name: stun
      port: 3478
      targetPort: stun
      protocol: UDP
