oci/derper/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: derper
  namespace: derper
spec:
  parentRefs:
    - name: derper
      sectionName: https
  hostnames:
    - "${DERP_HOSTNAME}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: derper
          port: 3340
